# identra-core

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  architecture.md
apps/identra-brain/: requirements.txt
apps/identra-brain/src/: main.py
clients/identra-desktop/: package.json
clients/identra-desktop/src/: App.css  App.tsx
clients/identra-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/identra-desktop/src-tauri/src/: lib.rs  main.rs
clients/identra-desktop/src-tauri/src/ipc/: mod.rs
clients/identra-desktop/src-tauri/src/screener/: mod.rs
clients/identra-desktop/src-tauri/src/setup/: mod.rs
clients/identra-desktop/src-tauri/src/vault/: mod.rs
clients/identra-desktop/src-tauri/src/window/: mod.rs
identra-landing/: fix_css.py  fix_scene.py  fix_tailwind_logic.py  fix_tailwind_logic_2.py  fix_white_flash.py  package-lock.json  package.json  patch_footer.py  patch_hero_mobile.py  patch_problem.py  patch_product_perf.py  patch_scene.py  patch_scene_scale.py  patch_trust_layout.py  patch_trust_perf.py  patch_waitlist.py  print_works.py
identra-landing/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
identra-landing/app/actions/: waitlist.ts
identra-landing/app/contact/: page.tsx
identra-landing/app/privacy/: page.tsx
identra-landing/app/security/: page.tsx
identra-landing/components/sections/: Differentiation.tsx  DownloadFooter.tsx  Hero.tsx  HowIdentraWorks.tsx  ProblemInsight.tsx  ProductExperience.tsx  SecurityTrust.tsx
libs/identra-core/: Cargo.toml
libs/identra-crypto/: Cargo.toml
libs/identra-crypto/src/: lib.rs
(+11 files in other folders)
