[package]
name = "identra-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "identra_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
identra-core = { path = "../../../libs/identra-core" }
identra-crypto = { path = "../../../libs/identra-crypto" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43", features = ["time"] }
base64 = "0.22"
active-win-pos-rs = "0.10.0"
enigo = "0.6.1"
arboard = "3.6.1"

